[package]
name = "mingmai"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6.4", features = ["transport-io", "macros"] }
ropey = "1.6.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "5"
pathdiff = "0.2"
schemars = "1"
