[package]
name = "mingmai"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp = { version = "0.6.4", features = ["transport-io", "macros"] }
ropey = "1.6.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dashmap = "5"
pathdiff = "0.2"
schemars = "1"
# Tree-sitter core and language grammars
# We pin core to a recent 0.25 release; language crates track compatible versions.
tree-sitter = "0.25"
# Pin language crates to compatible recent versions
# Some grammars publish at 0.23.x; JS/Python at 0.25.x
# Parser will validate at runtime and error if incompatible.
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-bash = "0.23"
tree-sitter-html = "0.23"
